<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#46EFDF"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layoutForTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="30dp"
        android:background="#535357"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/screenTextView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="#222227"
            android:padding="30dp"
            android:text="@string/text"
            android:textAlignment="viewEnd"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutForTextView"
        android:layout_marginHorizontal="28dp"
        android:background="#535357"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="#CCC9C9">

            <TextView
                android:id="@+id/nameK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintVertical_chainStyle="spread"
                android:text="@string/K"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/nameA"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintVertical_chainStyle="spread"
                android:text="@string/A"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/nameR"
                app:layout_constraintStart_toEndOf="@id/nameK"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintVertical_chainStyle="spread"
                android:text="@string/R"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/nameE"
                app:layout_constraintStart_toEndOf="@+id/nameA"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintVertical_chainStyle="spread"
                android:text="@string/E"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/nameP"
                app:layout_constraintStart_toEndOf="@+id/nameR"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintVertical_chainStyle="spread"
                android:text="@string/P"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/nameI"
                app:layout_constraintStart_toEndOf="@+id/nameE"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintVertical_chainStyle="spread"
                android:text="@string/I"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/nameN"
                app:layout_constraintStart_toEndOf="@+id/nameP"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintVertical_chainStyle="spread"
                android:text="@string/N"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nameI"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/first_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:background="#535357"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_throw"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#CCC9C9"
                android:gravity="center"
                android:text="@string/c"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/sign"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#CCC9C9"
                android:gravity="center"
                android:text="@string/sign"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/percent"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#CCC9C9"
                android:gravity="center"
                android:text="@string/percent"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/divide"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#F8BB2E"
                android:gravity="center"
                android:text="@string/divide"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_layout"
            android:layout_marginHorizontal="0dp"
            android:background="#535357"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#CCC9C9"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_7"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/but8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#CCC9C9"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_8"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/but9"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#CCC9C9"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_9"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#F8BB2E"
                android:gravity="center"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/third_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/second_layout"
            android:layout_marginHorizontal="0dp"
            android:background="#535357"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#CCC9C9"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_4"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/but5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#CCC9C9"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_5"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/but6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#CCC9C9"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_6"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/minus"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#F8BB2E"
                android:gravity="center"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourth_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/third_layout"
            android:layout_marginHorizontal="0dp"
            android:background="#535357"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#CCC9C9"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/but2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#CCC9C9"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_2"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/but3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#CCC9C9"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_3"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/plus"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#F8BB2E"
                android:gravity="center"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fourth_layout"
            android:layout_marginHorizontal="0dp"
            android:background="#535357"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but0"
                android:layout_width="161dp"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="2"
                android:background="#CCC9C9"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/butDot"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#CCC9C9"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/dot"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/total"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#F8BB2E"
                android:gravity="center"
                android:text="@string/total"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>